--- a/jxwh/test/manifest.plist
+++ b/jxwh/test/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ctsn801.gitee.io/test/jxwh.ipa</string>
+					<string>https://ctsn801.gitee.io/jxwh/test/jxwh.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://ctsn801.gitee.io/images/logo.png</string>
+					<string>https://ctsn801.gitee.io/jxwh/images/logo.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://ctsn801.gitee.io/images/logo.png</string>
+					<string>https://ctsn801.gitee.io/jxwh/images/logo.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
